# demo-rust-opentelemetry-stdout

./: Cargo.toml  README.md
src/: main.rs
